# SymCrypt

./: .artifactignore  .gitignore  .gitmodules  BRANCHES.md  BUILD.md  BranchStructure.txt  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  NOTICE  NOTICE.txt  PublishToGithub.cmd  README.md  SymCrypt.sln  SymCryptPackage.json  azure-build-template.yml  azure-pipelines.yml  cgmanifest.json  cmake_build_dir.patch  dirs  package.json  project.mk  scIntoWindows.cmd  scbuild.cmd  tvs.ruleset  version.json
lib/: 3des.c  AesTables.c  CMakeLists.txt  C_asm_shared.inc  DesTables.c  FatalIntercept.c  IEEE802_11SaeCustom.c  ScsTable.c  a_dispatch.c  aes-asm.c  aes-c.c  aes-default-bc.c  aes-default.c  aes-key.c  aes-neon.c  aes-selftest.c  aes-xmm.c  aes-ymm.c  aes-zmm.c  aesCtrDrbg.c  aescmac.c  aeskw.c  blockciphermodes.c  ccm.c  chacha20.c  chacha20_poly1305.c  cpuid.c  cpuid_notry.c  cpuid_um.c  crt.c  cshake_pattern.c  desx.c  dh.c  dl_internal_groups.c  dlgroup.c  dlkey.c  dsa.c  ec_dh.c  ec_dispatch.c  ec_dsa.c  (+130 more)
lib/amd64/: aesasm.asm  aesasm.symcryptasm  fdef369_asm.asm  fdef369_asm.symcryptasm  fdef_asm.asm  fdef_asm.symcryptasm  fdef_mul_macros.asm  fdef_mulx.asm  fdef_mulx.symcryptasm  sha1asm.asm  sha256xmm_asm.symcryptasm  sha256ymm_asm.symcryptasm  sha2common_asm.symcryptasm  sha512ymm_asm.symcryptasm  sha512ymm_avx512vl_asm.symcryptasm  symcrypt_magic.inc  wipe.asm  wipe.symcryptasm
lib/arm/: aesasm.asm  fdef_asm.asm  fdef_asm.symcryptasm  symcrypt_magic.inc  wipe.asm
lib/arm64/: fdef369_asm.asm  fdef369_asm.symcryptasm  fdef_asm.asm  fdef_asm.symcryptasm  symcrypt_magic.inc  symcrypt_name_mangling.inc  wipe.asm  wipe.symcryptasm
lib/arm64ec/: fdef369_asm.asm  fdef_asm.asm  symcrypt_magic.inc  symcrypt_name_mangling.inc  wipe.asm
lib/i386/: aesasm.asm  aesasm.cppasm  fdef_asm.asm  fdef_asm.cppasm  rc4asm.asm  sha1asm.asm  symcrypt_magic.inc  wipe.asm
lib/iOS/: precomp_iOS.h
lib/iOS/symcrypt.xcodeproj/: project.pbxproj
lib/linux/: asmstubs.c  intrinsics.c
lib/rust/: CMakeLists.txt  Cargo.toml  README.md  rust-toolchain  rustfmt.toml
lib/rust/proof/: Symcrust.lean
lib/rust/src/: ALLOCATIONS.md  common.rs  ffi.rs  hash.rs  key.rs  lib.rs  mlkem.rs  ntt.rs  test.rs
module/: CMakeLists.txt
module/embedded/: CMakeLists.txt
module/generic_linux/: CMakeLists.txt  module.c  precomp.h
module/linux_common/: CMakeLists.txt  cgmanifest.json  exports.ver  integrity.c  module.c  nointegrity.c  precomp.h  rng.c  rng.h
module/linux_common/optional/: rngfipsjitter.c
module/oe_full/: CMakeLists.txt  exports.ver  module.c  precomp.h  rng.c  rng.h
modules/: CMakeLists.txt  statusindicator_common.h  symcrypt_modules_common.h
modules/linux/: CMakeLists.txt
modules/linux/common/: CMakeLists.txt  ModuleCommon.cmake  callbacks_pthread.c  callbacks_singlethreaded.c  exports.ver  integrity.c  module.c  precomp.h  rng.c
modules/linux/generic/: CMakeLists.txt  statusindicator.c
modules/linux/oe_full/: CMakeLists.txt
modules/linux/optee/: CMakeLists.txt
modules/posix/: CMakeLists.txt
modules/windows/: CMakeLists.txt
modules_linux/: CMakeLists.txt
modules_linux/common/: CMakeLists.txt  ModuleCommon.cmake  exports.ver  integrity.c  integrity.h  module.c  precomp.h  rng.c  rng.h
modules_linux/embedded/: CMakeLists.txt  precomp.h
modules_linux/generic/: CMakeLists.txt
modules_linux/oe_full/: CMakeLists.txt  rng.c
unittest/: CMakeLists.txt  dirs  sources_exe.inc  symcryptunittest.rc
unittest/exe_Win7nLater/: CMakeLists.txt  main_exe.cpp  precomp.h  sources  symcryptunittest.rc
unittest/exe_Win8_1nLater/: CMakeLists.txt  main_exe.cpp  sources
unittest/exe_legacy/: CMakeLists.txt  main_exe.cpp  precomp.h  sources
unittest/exe_linux/: CMakeLists.txt  dynamic-list.ver  main_exe.cpp
unittest/exe_moduletest/: CMakeLists.txt  moduletest.cpp
unittest/exe_posix/: CMakeLists.txt  main_exe.cpp
unittest/exe_test/: CMakeLists.txt  SymCryptUnitTest.vcxproj  main_exe.cpp  precomp.h  sources
unittest/iOS/: helper.mm  precomp_iOS.h
unittest/inc/: SymCryptKernelTestModule_FuncList.h  SymCryptKernelTestModule_IoctlDefs.h  algorithm_base.h  capi_implementations.h  cng_implementations.h  hash_imp_pattern.h  ioctlDefs.h  kat.h  libcrux_implementations.h  main_inline.h  msbignum_implementations.h  old-testRsa.h  openssl_implementations.h  perf.h  perfprint.h  printtable.h  ref_implementations.h  resultMerge.h  rndDriver.h  rng.h  rsa32_implementations.h  sc_dispatch_shims.h  sc_imp_shims.h  sc_implementations.h  sc_implementations_pattern.h  selftestFuncList.inc  testInterop.h  testRsa.h  test_lib.h
unittest/lib/: CMakeLists.txt  callback.cpp  capi_imp_blockcipherpattern.cpp  capi_imp_hashpattern.cpp  capi_imp_macpattern.cpp  capi_implementations.cpp  cng_imp_authenc.cpp  cng_imp_blockcipherpattern.cpp  cng_imp_hashpattern.cpp  cng_imp_kdfpattern.cpp  cng_imp_macpattern.cpp  cng_imp_parallelhashpattern.cpp  cng_imp_pbkdf2pattern.cpp  cng_imp_sp800_108pattern.cpp  cng_imp_tlsprf1_1pattern.cpp  cng_imp_tlsprf1_2pattern.cpp  cng_implementations.cpp  env_SymCryptUnittest.cpp  env_commonSymCryptUnittest.cpp  env_linuxSymCryptUnittest.cpp  env_windowsSymCryptUnittest.cpp  kat.cpp  libcrux_implementations.cpp  main.cpp  main_exe_common.cpp  main_exe_common_windows.cpp  main_sys_common.cpp  msbignum_implementations.cpp  old-testRsa.cpp  old-testRsa_msbignum.cpp  old-testRsa_sc.cpp  openssl_imp_hashpattern.cpp  openssl_imp_macpattern.cpp  openssl_imp_pattern.cpp  openssl_implementations.cpp  perf.cpp  perfPrint.cpp  perf_sc_imp_pattern.cpp  precomp.h  printtable.cpp  (+73 more)
unittest/module_windows/: CMakeLists.txt  exports.def  module.cpp  sources  symcrypttestmodule.vcxproj
unittest/module_windows_sys_km/: SymCryptKernelTestModule.vcxproj  main_sys.cpp  sources
unittest/module_windows_sys_um/: module.cpp  precomp.h  sources  sources.dep  symcryptkerneltestmodule_um.vcxproj
unittest/sys_Win7nLater/: main_sys.cpp  precomp.h  sources
unittest/sys_legacy/: main_sys.cpp  precomp.h  sources  symcryptunittest.rc
unittest/sys_test/: main_sys.cpp  sources
(+142 files in other folders)
